fixed some overflow errors that was causing the webpage to scroll horizontally. Limited event cards to 3.

--- a/client/src/components/acm_board/acm_board.css
+++ b/client/src/components/acm_board/acm_board.css
@@ -9,7 +9,7 @@
 .board-container {
     min-height: 100vh;
     padding: 3.125rem 1.25rem;
-    width: 100%;
+    width: 85vw;
     margin: 0 auto;
     text-align: center;
     color: white;
