--- a/client/src/components/upcoming_events/upcoming_events.css
+++ b/client/src/components/upcoming_events/upcoming_events.css
@@ -24,7 +24,7 @@
 .carousel-wrapper {
     display: flex;
     justify-content: center;
-    width: 100vw;
+    width: 85vw;
 }
 
 .carousel-window {
